--- a/admin/css/dashboard.html
+++ b/admin/css/dashboard.html
@@ -22,12 +22,23 @@
         }
 
         .blogify-header #credits {
+            display: flex;
+            gap: 5px;
+            align-items: center;
+            justify-content: space-between;
             color: #fff;
             font-size: 11px;
-            font-weight: 600;
             padding: 5px;
+            font-weight: 600;
             border-radius: 18px;
             background-color: #f2470d;
+        }
+
+        #credits-logo {
+            width: 10px;
+            height: 10px;
+            border-radius: 50%;
+            border: solid 1.5px #fff;
         }
 
         .blogify-header #user-avatar {
@@ -38,25 +49,25 @@
         }
 
 
-        .blogify-header .left {
+        .blogify-header > .left {
             display: flex;
             align-items: center;
             margin-right: auto;
         }
 
-        .blogify-header .right {
+        .blogify-header > .right {
             display: flex;
             align-items: center;
             margin-left: auto;
         }
 
-        .blogify-header .left img,
-        .blogify-header .left span {
+        .blogify-header .left > img,
+        .blogify-header .left > span {
             margin-right: 10px;
         }
 
-        .blogify-header .right img,
-        .blogify-header .right span {
+        .blogify-header .right > img,
+        .blogify-header .right > span {
             margin-left: 10px;
         }
 
@@ -106,11 +117,14 @@
         </div>
         <div class="right">
             <span id="credits">
-                Credits: 800
+                <img id="credits-logo" src="../images/blogify-logo-white.png" />
+                <span>
+                    Credits: 800
+                </span>
             </span>
             <img class="icon" src="../images/settings-gear-icon.svg" />
             <img class="icon" src="../images/notification-icon.svg" />
-            <img id="user-avatar" src="../images/blogify-light.svg" />
+            <img id="user-avatar" src="../images/blogify-banner-light.svg" />
         </div>
     </header>
     <article class="status-bar">
