refactor(ui): compartmentalise <header>

--- a/admin/css/dashboard.html
+++ b/admin/css/dashboard.html
@@ -5,71 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../css/theme.css">
+    <link rel="stylesheet" href="../css/header.css">
     <style>
-        .blogify-header {
-            display: flex;
-            align-items: center;
-            padding: 10px;
-        }
-
-        .blogify-header #blogify-banner {
-            height: 28px;
-        }
-
-        .blogify-header img .icon {
-            width: 20px;
-            height: 20px;
-        }
-
-        .blogify-header #credits {
-            display: flex;
-            gap: 5px;
-            align-items: center;
-            justify-content: space-between;
-            color: #fff;
-            font-size: 11px;
-            padding: 5px;
-            font-weight: 600;
-            border-radius: 18px;
-            background-color: #f2470d;
-        }
-
-        #credits-logo {
-            width: 10px;
-            height: 10px;
-            border-radius: 50%;
-            border: solid 1.5px #fff;
-        }
-
-        .blogify-header #user-avatar {
-            width: 28px;
-            height: 28px;
-            border-radius: 50%;
-            border: solid 1.5px #f2470d;
-        }
-
-
-        .blogify-header > .left {
-            display: flex;
-            align-items: center;
-            margin-right: auto;
-        }
-
-        .blogify-header > .right {
-            display: flex;
-            align-items: center;
-            margin-left: auto;
-        }
-
-        .blogify-header .left > img,
-        .blogify-header .left > span {
-            margin-right: 10px;
-        }
-
-        .blogify-header .right > img,
-        .blogify-header .right > span {
-            margin-left: 10px;
-        }
+        
 
 
 
@@ -111,7 +50,7 @@
 </head>
 
 <body>
-    <header class="blogify-header">
+    <header class="blogify">
         <div class="left">
             <img id="blogify-banner" src="../images/blogify-banner.png" />
         </div>
