refactor(ui): add div to simulate body

--- a/admin/css/dashboard.html
+++ b/admin/css/dashboard.html
@@ -50,7 +50,8 @@
 </head>
 
 <body>
-    <header class="blogify">
+    <div class ="blogify">
+    <header>
         <div class="left">
             <img id="blogify-banner" src="../images/blogify-banner.png" />
         </div>
@@ -94,6 +95,7 @@
             <button type="button">Create Blog</button>
         </article>
     </main>
+    </div>
 </body>
 
 </html>
