refactor(all-blogs): chnage arrow icons in pagination footer

--- a/admin/css/all-blogs.html
+++ b/admin/css/all-blogs.html
@@ -84,7 +84,7 @@
             <span class="pagination">
                 <span class="page-numbers">
                     <button type="button" class="secondary">
-                        <img id="arrow-left" src="../images/icons/arrow-right-icon.svg" />
+                        <img class="arrow" src="../images/icons/arrow-end-left-icon.svg" />
                     </button>
                     <button type="button" class="secondary">
                         3
@@ -102,7 +102,7 @@
                         7
                     </button>
                     <button type="button" class="secondary">
-                        <img id="arrow-right" src="../images/icons/arrow-right-icon.svg" />
+                        <img class="arrow" src="../images/icons/arrow-end-right-icon.svg" />
                     </button>
                 </span>
                 <span class="page-info"">
