feat(ui): add subscription page

--- a/admin/css/all-blogs.html
+++ b/admin/css/all-blogs.html
@@ -107,7 +107,7 @@
                 </span>
                 <span class="page-info"">
                     <span class="page-stats">
-                        Showing results 1 - 10 of 77
+                        Showing Results 1 - 10 of 77
                     </span>
                     <label>Number of Items to Display:
                     <select name="page-limit" id="page-limit">
