feat(ui): polish redirect page

--- a/admin/ui/redirect.htm
+++ b/admin/ui/redirect.htm
@@ -12,7 +12,7 @@
         </section>
         <article class="redirect">
             <span class="instructions">
-                <h1>Seamless Integration for Your WordPress Account</h1>
+                <h1>Seamless Integration with <?php echo ucfirst(wp_get_current_user()->display_name . "'s" ?? "Your"); ?> WordPress Site</h1>
                 <span class="description">
                     <h3>To establish a connection, a prompt may appear requesting authorization.<br>
                         Should the automatic process not initiate, kindly click the <a
